﻿Changes in progress
-------------------------------------------

Versió 2015061500 0.2.7
-------------------------------------------
 - Requirements of Moodle 2.7 or greater
 - Code and settings cleaning
 - Settings moved to config_plugins

Versió 2013042200 - ITTERIA/UPCNET (2013-04-22 @sarjona)
-------------------------------------------
- Adapted version to Moodle 2. Tested and compatible with Moodle 2.3 and 2.4


Versió 2012100591 (2012-10-05 @mmartinez)
-------------------------------------------
- Add extra control for just show the users confirmed and non deleted in the assigment books credentials process


Versió 2012090591 (2012-09-05 @mmartinez)
-------------------------------------------
- Add key procces, prevend to add empty credentials
- Edit credential procces, prevend to set empty credentials
- List of posible users to assign in the assign credential process, review that any user with other credential for that book can be assigned
- Import credentials process, show message if the file size is hightes than the alloweb by the php directives or Moodle configuration



Versió 2012072791 (2012-07-06 @mmartinez)
-------------------------------------------
- Cadenes de text directament al codi
- Amagar botó "Comprova" a les credencials que no estan assignades
- Amplada columna usuaris
- Errors amb la importació de credencials des del fitxer CSV
- Eliminar pantalla intermitja si no hi ha cap error ni avís
- No triar acció al selector fins que no se selecciona com a mínim una credencial


Versió 2012070691 (2012-07-06 @mmartinez)
-------------------------------------------
- Manage books credentials


Versió 2012060691 (2012-07-10 @mmartinez)
-------------------------------------------
- New functionality to manage credentials


Versió 2011102591 (2011-10-25 @mmartinez)
-------------------------------------------
- WebServices/BooksStructure/get_books_strucutre.php
  Addslashes
